Добавление логики автоматического передвижения и увеличения змейки

--- a/src/css/color.scss
+++ b/src/css/color.scss
@@ -3,8 +3,9 @@ $palette: (
   black: #000,
   brown: #b96300,
   brown-light: #602200,
-    blue:#4848e8,
-    yellow: #fbff03
+  blue:#4848e8,
+  bright-blue:#67bdff,
+  yellow: #fbff03
 );
 
 $light-theme: (
@@ -12,6 +13,7 @@ $light-theme: (
   def-black: map-get($palette, black),
   square: map-get($palette, brown),
   square-border: map-get($palette, brown-light),
-    player: map-get($palette, blue),
-    food: map-get($palette, yellow),
+  player: map-get($palette, blue),
+  head: map-get($palette, bright-blue),
+  food: map-get($palette, yellow),
 );
