--- a/src/features/Map/Map.module.scss
+++ b/src/features/Map/Map.module.scss
@@ -1,8 +1,9 @@
 .map {
+  margin-top: 10rem;
   .square {
     display: inline-block;
-    width: 2rem;
-    height: 2rem;
+    width: 4rem;
+    height: 4rem;
     background-color: var(--square);
     border: 5px solid var(--square-border);
     margin: -2px ;
@@ -10,12 +11,17 @@
   .player{
     background-color: var(--player);
   }
+  .head{
+    background-color: var(--head);
+  }
   .food{
     background-color: var(--food);
   }
   .score{
+    margin-bottom: 1rem ;
     font-size: 5rem;
     font-family: "Pixelify Sans";
     font-weight: 600;
+    color: var(--def);
   }
 }
