Добавление функции победы и рестарта игры. Добавлены экраны поражения и победы

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -4,7 +4,7 @@
 *:after,
 *:before {
   font-size: calc(3px + 7 * (100vw / 1920));
-  font-family: 'Poppins', sans-serif;
+  font-family: "Pixelify Sans";
 }
 
 @media (min-width: 1920px) {
